fix scrollbar padding

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,11 +6,13 @@
 
 * {
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
 html {
     overflow: -moz-scrollbars-vertical;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 html,
@@ -19,9 +21,9 @@ body {
     font-size: var(--default-font-size);
     background-color: var(--base-color);
     color: var(--base-color-text);
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     overflow-x: hidden;
 }
 
